clusters/k4/kubernetes/apps/dev-sandbox/forgejo-runner/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ${APP}
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/managed-by: forgejo-runner
  enableDefaultDeny:
    ingress: true
  egress:
    - # Forgejo runner controller
      toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo-runner
      toPorts:
        - ports:
            - protocol: TCP
              port: "38809"
    - # Forgejo runner cache & proxy
      toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo-runner
      toPorts:
        - ports:
            - port: "8088"
              protocol: TCP
            - port: "8089"
              protocol: TCP
    - # Envoy
      toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
    - # Internet egress
      toCIDRSet:
        # Internet egress
        - cidrGroupRef: internet
      toPorts:
        - ports:
            - protocol: TCP
              port: "80"
            - protocol: TCP
              port: "443"
